--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/alexsophiekim/ajax-json/issues"
   },
-  "homepage": "https://github.com/alexsophiekim/ajax-json#readme"
+  "homepage": "https://github.com/alexsophiekim/ajax-json#readme",
+  "dependencies": {
+    "jquery": "^3.4.1"
+  }
 }
